--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,49 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "ng-chessboardjs": {
+      "projectType": "library",
+      "root": "projects/ng-chessboardjs",
+      "sourceRoot": "projects/ng-chessboardjs/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "tsConfig": "projects/ng-chessboardjs/tsconfig.lib.json",
+            "project": "projects/ng-chessboardjs/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ng-chessboardjs/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ng-chessboardjs/src/test.ts",
+            "tsConfig": "projects/ng-chessboardjs/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-chessboardjs/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ng-chessboardjs/tsconfig.lib.json",
+              "projects/ng-chessboardjs/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }},
+  "cli": {
+    "analytics": "9a44ebc9-0bfa-44a1-b271-73a67a729c29"
+  },
+  "defaultProject": "ng-chessboardjs"
 }
