add logic based on ng2-chessboard

--- a/projects/ng-chessboardjs/package.json
+++ b/projects/ng-chessboardjs/package.json
@@ -1,11 +1,14 @@
 {
   "name": "ng-chessboardjs",
-  "version": "0.0.1",
+  "version": "1.0.0-beta",
+  "license": "MIT",
   "peerDependencies": {
     "@angular/common": "^10.1.6",
     "@angular/core": "^10.1.6"
   },
   "dependencies": {
-    "tslib": "^2.0.0"
+    "tslib": "^2.0.0",
+    "chessboardjs": "^0.0.1",
+    "jquery": "^3.5.1"
   }
 }
