--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ng-chessboardjs",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint"
   },
